Fixes and corrections.

--- a/gaj-data-analysis/research/Trees/hierachical-softmax.tex
+++ b/gaj-data-analysis/research/Trees/hierachical-softmax.tex
@@ -34,13 +34,12 @@ the question is, can we form a shorter, but still unique, vector representation?
 The answer is, yes we can. To do so, we first need to hierarchically partition the vocabulary ${\cal V}$ into 
 a binary tree representation, which we shall call ${\cal T}_{\cal V}$. 
 One way to do this is to simply partition ${\cal V}$ into two roughly equally sized lists, and then
-recursively partition each list until only single tokens remain in each final list.
+recursively partition each list until only single tokens remain in each innermost list.
 Alternatively, we can utilise the word frequency $f_i$ of each token $w_i$ to produce the probability,
-$p_i=f_i/\sum_{i'=1}^V f_{i'}$, that a word randomly sampled from the training corpora matches $wi$.
+$p_i=f_i/\sum_{i'=1}^V f_{i'}$, that a word randomly sampled from the training corpora matches $w_i$.
 Using these probabilities, one can then partition ${\cal V}$ into nested groups, e.g.\ according to
 either Huffman or Fano coding (the latter method being simpler but producing less optimal code lengths).
-Figure~\ref{fig:catdog} shows a (rather unbalanced) binary tree representation of the example vocabulary 
-${\cal V} = \{{\tt cat},{\tt dog},{\tt frog},{\tt mouse}\}$.
+Figure~\ref{fig:catdog} shows a (rather unbalanced) binary tree representation of the example vocabulary. 
 \begin{figure}[hbt]
 \centering
 \begin{tikzpicture}[cnode/.style={draw,circle,minimum size=3em,inner sep=3pt}, rnode/.style={draw,rectangle,minimum size=3em,inner sep=3pt}]
@@ -54,12 +53,12 @@ ${\cal V} = \{{\tt cat},{\tt dog},{\tt frog},{\tt mouse}\}$.
 
     \draw[->] (0) edge node [pos=0.5, above] {\hspace*{-10mm}$b_1=0$} (1) ;
     \draw[->] (0) edge node [pos=0.5, above] {\hspace*{10mm}$b_1=1$} (2) ;
-    \draw[->] (1) edge node [pos=0.5, above] {$b_2=0$} (3) ;
-    \draw[->] (1) edge node [pos=0.5, above] {$b_2=1$} (4) ;
-    \draw[->] (4) edge node [pos=0.5, above] {$b_3=0$} (5) ;
-    \draw[->] (4) edge node [pos=0.5, above] {$b_3=1$} (6) ;
+    \draw[->] (1) edge node [pos=0.5, above] {\hspace*{-10mm}$b_2=0$} (3) ;
+    \draw[->] (1) edge node [pos=0.5, above] {\hspace*{10mm}$b_2=1$} (4) ;
+    \draw[->] (4) edge node [pos=0.5, above] {\hspace*{-10mm}$b_3=0$} (5) ;
+    \draw[->] (4) edge node [pos=0.5, above] {\hspace*{10mm}$b_3=1$} (6) ;
 \end{tikzpicture}
-\caption{\em An example of a binary, hierarchical representation of a simple vocabulary.}
+\caption{\em An example of an unbalanced binary tree representation of a simple vocabulary.}
 \label{fig:catdog}
 \end{figure}
 
@@ -80,10 +79,10 @@ sequence of binary branching decisions (0 for left, 1 for right) made along the 
 Thus, in this example we now have $\texttt{repr}(\texttt{cat})=(0,0)$, 
 $\texttt{repr}(\texttt{dog})=(0,1,0)$, $\texttt{repr}(\texttt{frog})=(0,1,1)$
 and $\texttt{repr}(\texttt{mouse})=(1)$.
-These binary sequences form one hierarchical representation of this vocabulary.
-Note that here the maximum size of the representation vector is three, whereas it would be two for a balanced tree,
+These binary sequences collectively form the hierarchical representation of this vocabulary.
+Note that, for our simple example, the maximum size of the representation vector is three, whereas it would be two for a balanced tree,
 in contrast to the fixed size of four for the 1-of-$V$ representation.
-In general, the size is reduced from $V$ to about $\log_2 V$ by the binary, hierarchical partitioning.
+In general, the size is reduced from $V$ to about $\log_2 V$ by the binary partitioning.
 
 \section{Probability Model}
 
@@ -97,19 +96,19 @@ Recalling that $\texttt{repr}(\texttt{frog})=(0,1,1)$, we see that
 p(\texttt{frog}\;|\;\textbf{x})
 & = & p(b_1=0,b_2=1,b_3=1\;|\;\textbf{x})
 \nonumber\\
-& = & p(b_1=0\;|\;\textbf{x})p(b_2=1\;|\;\textbf{x},b_1=0)
+& = & p(b_1=0\;|\;\textbf{x})\,p(b_2=1\;|\;\textbf{x},b_1=0)\,
 p(b_3=1\;|\;\textbf{x},b_1=0,b_2=1)
 \,.\nonumber
 \end{eqnarray}
 To make this more general, let $\rvec{\rho}_{1:j}=(b_1, b_2, \cdots, b_j)$ for $j=1,2,\ldots,n$,
-where each binary decision $b_j$ takes its corresponding value from the $j$th element of $\texttt{repr}(w)$.
+where each binary decision $b_j$ takes its corresponding value from the $j$-th element of $\texttt{repr}(w)$.
 Then we see that
 \begin{eqnarray}
 p(w\;|\;\textbf{x})
 & = & \prod_{j=1}^n p(b_j\;|\;\textbf{x},\rvec{\rho}_{1:j-1})\,,
 \label{eq:p:word}
 \end{eqnarray}
-where $\rvec{\rho}_{1:0}=()$ by definition.
+where $\rvec{\rho}_{1:n}=\texttt{repr}(w)$, and $\rvec{\rho}_{1:0}=()$ by definition.
 
 Notionally, each subpath, specified by $\rvec{\rho}_{1:j}$ for $j<n$,
 terminates at some unique, internal node $\eta_k$ in ${\cal T}_{\cal V}$, indexed by
@@ -119,7 +118,7 @@ Furthermore, we suppose that composing the context $\textbf{x}$ with node $\eta_
 results in local features ${\bf\phi}_k({\bf x})={\bf\phi}({\bf x},{\bf\theta}_k)$.
 Hence, each factor of equation~\eqref{eq:p:word} becomes
 \begin{eqnarray}
-p(b_j\;|\;\textbf{x},\rvec{\rho}_{1:j-1}) & = &
+p(b_j\;|\;\textbf{x},\rvec{\rho}_{1:j-1}) & \doteq &
 p(b_j\;|\;{\bf\phi}_{k}({\bf x}),k=\iota(\rvec{\rho}_{1:j-1}))
 \,,
 \label{eq:p:word:term}
@@ -130,11 +129,11 @@ for $j=1,2,\ldots,n$ with $n=|\texttt{repr}(w)|$.
 
 In a neural network framework, the probability terms comprising equation~\eqref{eq:p:word} would represent an output layer
 consisting of, for each internal node of the tree ${\cal T}_{\cal V}$, an activation function of an affine transformation of the input $\textbf{x}$.
-Here we choose the logistic sigma activation function $\sigma(x)=1/(1+\exp{-x})$, and thus suppose that the local features of node $\eta_k$
-are given by ${\bf\phi}_k({\bf x})=\alpha_k + {\bf \beta_k}^{T}{\bf x}$.
+Here we choose the logistic sigma activation function $\sigma(x)=1/(1+\exp{(-x)})$, and thus suppose that the local features of node $\eta_k$
+are given by ${\bf\phi}_k({\bf x})=\alpha_k + {\bf \beta}_k^{T}{\bf x}$.
 Hence, we take the probability of the $j$-th binary decision $b_j$ along a specified path $\rvec{\rho}_{1:n}$ to be
 \begin{eqnarray}
-p(b_j\;|\;{\bf x},\rvec{\rho}_{1:j-1}) & = & \sigma((2b_j-1)(\alpha_k+{\bf \beta_k}^{T}{\bf x}))\,,
+p(b_j\;|\;{\bf x},\rvec{\rho}_{1:j-1}) & \doteq & \sigma((2b_j-1)(\alpha_k+{\bf \beta}_k^{T}{\bf x}))\,,
 \end{eqnarray}
 from equation~\eqref{eq:p:word:term}. We have made use of the fact that $1-\sigma(x)=\sigma(-x)$.
 
@@ -158,44 +157,51 @@ Consequently, we can apply the $A^*$ search algorithm (albeit without a heuristi
 
 To do so, we start with an empty {\em chart} (or {\em closed set}) ${\cal C}$ that will contain evaluated subpaths,
 and an empty {\em priority queue} (or {\em open set}) ${\cal Q}$ that will contain subpaths to be evaluated.
-We then insert the empty subpath $()$ onto ${\cal Q}$ with score 1.
-Then repeatedly, while ${\cal Q}$ is not empty, we remove the best scoring subpath and: (i) if it terminates at a leaf node, return the word $w$ with its score;
+We then insert the empty subpath $()$ onto ${\cal Q}$ with its default score.
+Then repeatedly, while ${\cal Q}$ is not empty, we remove the best scoring subpath and: (i) if it terminates at a leaf node, return the word $w$;
 or else (ii) insert the subpath into ${\cal C}$, evaluate the two binary decisions ($b=0$ and $b=1$), and insert each new subpath with its corresponding score onto ${\cal Q}$.
-Note that, based on the implementation, the chart ${\cal C}$ might or might not be required (depending upon whether or not it is used to reconstruct the optimal path via backtracking).
-A chartless version of the algorithm is given by Algorithm~\ref{alg:astar}. Note that this algorithm can easily be adapted to produce the top $N$ most probable words.
-
+Pseudo-code for this method is given by Algorithm~\ref{alg:astar}.
+Note that, based on the implementation, the chart ${\cal C}$ might or might not be required (depending upon whether or not it is used to reconstruct the optimal path via backtracking);
+here we show a chartless version.
 \begin{algorithm}[hbt]
  \SetAlgoLined
  \SetKwInOut{Input}{Input}\SetKwInOut{Output}{Output}
  \Input{Binary vocabulary tree ${\cal T}_{\cal V}$; word context ${\bf x}$}
  \Output{Word $w$; score $s$; path $\rho$}
  \BlankLine
- \tcp{Initialise queue}${\cal Q}\leftarrow []$\;
- Obtain root node: $\eta\leftarrow\textbf{get\_root}({\cal T}_{\cal V})$\;
- Construct score node: $\nu\leftarrow\texttt{make\_node}(\texttt{node}=\eta, \texttt{path}=(),\texttt{score}=1)$\;
- Insert score node: $Q\leftarrow\texttt{insert}({\cal Q}, \nu)$\;
+ ${\cal Q}\leftarrow [\;]$\tcp*[r]{Initialise queue}
+ $\eta\leftarrow\textbf{get\_root}({\cal T}_{\cal V})$\tcp*[r]{Obtain root node}
+ $\nu\leftarrow\textbf{make\_node}(\texttt{node}=\eta, \texttt{path}=(),\texttt{score}=1)$\tcp*[r]{Construct score node}
+ $Q\leftarrow\textbf{insert\_node}({\cal Q}, \nu)$\tcp*[r]{Insert score node}
  \While{$|{\cal Q}|>0$}{
-  Obtain highest-scoring node: $\nu\leftarrow\textbf{pop}({\cal Q})$\;
-  Obtain score: $s\leftarrow\texttt{get\_value}(\nu, \texttt{score})$\;
-  Obtain path: $\rho\leftarrow\texttt{get\_value}(\nu, \texttt{path})$\;
-  Obtain tree node: $\eta\leftarrow\texttt{get\_value}(\nu, \texttt{node})$\;
-  \eIf{$\texttt{is-leaf}(\eta)$}{
-   Obtain word: $w\leftarrow\texttt{get\_word}(\eta)$\;
+  $({\cal Q}, \nu)\leftarrow\textbf{pop\_node}({\cal Q})$\tcp*[r]{Obtain highest-scoring node}
+  $s\leftarrow\textbf{get\_value}(\nu, \texttt{score})$\tcp*[r]{Obtain score}
+  $\rho\leftarrow\textbf{get\_value}(\nu, \texttt{path})$\tcp*[r]{Obtain path}
+  $\eta\leftarrow\textbf{get\_value}(\nu, \texttt{node})$\tcp*{Obtain tree node}
+  \eIf{$\textbf{is\_leaf}(\eta)$}{
+   $w\leftarrow\textbf{get\_word}(\eta)$\tcp*[r]{Obtain word}
    \KwRet{$(w,s,\rho)$}\;
   }{
-   Compute probability: $p\leftarrow\texttt{get\_prob}(\eta, {\bf x})$\;
-   Construct scores: $s'\leftarrow[s(1-p),sp]$\; 
+   $p\leftarrow\textbf{calc\_prob}(\eta, {\bf x})$\tcp*[r]{Compute probability of $b=1$}
+   $s'\leftarrow[s(1-p),sp]$\tcp*[r]{Construct scores}
    \For{$b\in\{0,1\}$}{
-    Get child node: $\eta'\leftarrow\texttt{get\_child}(\eta, b)$\;
-    Construct child path: $\rho'\leftarrow\rho\oplus(b)$\;
-    Construct score node: $\nu'\leftarrow\texttt{make\_node}(\texttt{node}=\eta', \texttt{path}=\rho', \texttt{score}=s'[b])$\;
-    Insert score node: $Q\leftarrow\texttt{insert}({\cal Q}, \nu')$\;
+    $\eta'\leftarrow\textbf{get\_child}(\eta, b)$\tcp*[r]{Obtain child node}
+    $\rho'\leftarrow\rho\oplus(b)$\tcp*[r]{Construct child path}
+    $\nu'\leftarrow\textbf{make\_node}(\texttt{node}=\eta', \texttt{path}=\rho', \texttt{score}=s'[b])$\tcp*[r]{Construct score node}
+    $Q\leftarrow\textbf{insert\_node}({\cal Q}, \nu')$\tcp*[r]{Insert score node}
    }
   }
  }
  \caption{Find word with highest probability}
  \label{alg:astar}
 \end{algorithm}
+
+Note that this algorithm can easily be adapted to produce the top $N$ most probable words.
+Also note that, in practice, it is better to sum (negative) log-probability scores rather than directly multiply probabilities,
+otherwise for large vocabulary trees we run into the problem of underflow of vanishingly small probabilities.
+There are in fact many more subtleties to implementing the $A^*$ algorithm, including: how to build the priority queue;
+how to insert a node ranked by score;
+where to insert a node into a batch of equally-scored nodes; etc. These issues will not be addressed here.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{9}
